--- a/src/webparts/wordPressRssFeed/components/WordPressRssFeed.module.scss
+++ b/src/webparts/wordPressRssFeed/components/WordPressRssFeed.module.scss
@@ -18,7 +18,7 @@
   flex-wrap: wrap;
 }
 .flexBoxJustifyEnd {
-  justify-content: end;
+  justify-content: flex-end;
   margin-top: 1rem;
   display: flex;
   flex-wrap: wrap;
